--- a/src/Modules/InvoiceModule/Views/InvoiceControlView.xaml
+++ b/src/Modules/InvoiceModule/Views/InvoiceControlView.xaml
@@ -56,6 +56,9 @@
                                AllowGrouping="True"
                                ShowGroupDropArea="True"
                                NavigationMode="Row"
+                               CellStyle="{StaticResource KarveGridCell}"
+                               AlternatingRowStyle="{StaticResource KarveAlternatingRowStyle}"
+                               HeaderStyle ="{StaticResource BasicHeaderStyle}"
                                FilterRowPosition="FixedTop"
                                karveControls:KarveGridExt.GridIdentifier="{Binding GridIdentifier, Mode=OneWay}"
                                karveControls:KarveGridExt.GridInitCommand="{Binding GridRegisterCommand, Mode=OneWay}"
