--- a/src/Controls/KarveControls/DriverUserControl/DriverUserControl.xaml
+++ b/src/Controls/KarveControls/DriverUserControl/DriverUserControl.xaml
@@ -38,13 +38,14 @@
 
         <karveControls:DataField LabelText="{Binding lnombre, Source={StaticResource ResourceLanguage}}"
                                  Height="30"
+                                 LabelTextWidth="95"
                                  DataObject="{Binding DataObject, Mode=TwoWay}"
                                  DataSourcePath="NOMBRE_RES"
                                  ItemChangedCommand="{Binding ItemChangeCommand}"
                                  Watermark="{Binding lnombre, Source={StaticResource ResourceLanguage}}"
                                  TextContent="{Binding DataObject.NOMBRE_RES, ValidatesOnDataErrors=True, 
                                                 ValidatesOnExceptions=True}" 
-                                 TextContentWidth="250" Grid.Row="1" Margin="0,0,0,2"/>
+                                 TextContentWidth="250" Grid.Row="1" Margin="4,0,0,2"/>
         <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"></ColumnDefinition>
@@ -53,18 +54,18 @@
             <karveControls:DataField Grid.Column="0" LabelText="{Binding lnif, Source={StaticResource ResourceLanguage}}" 
                                      Height="30"
                                      Watermark="{Binding lnif, Source={StaticResource ResourceLanguage}}"
-                                     LabelTextWidth="86"
+                                     LabelTextWidth="95"
                                      DataSourcePath="DNICOND_RES2"
                                      DataObject="{Binding DataObject}"
                                      ItemChangedCommand="{Binding ItemChangedCommand}"
                                      TextContent="{Binding DataObject.DNICOND_RES2, ValidatesOnDataErrors=True, ValidatesOnExceptions=True}" 
-                                     TextContentWidth="50" Margin="1,3,0,3">
+                                     TextContentWidth="50" Margin="4,3,0,3">
             </karveControls:DataField>
             <karveControls:DualFieldSearchBox DataFieldFirst="PAISNIFCOND_RES2"
                                                       Grid.Column="1"
                                                       x:Name="CountryNif"
-                                                      AssistTableName="COUNTRY2_ASSIST"
-                                                      AssistProperties="Code,Name"
+                                                      AssistTableName="COUNTRY_ASSIST_2"
+                                                      AssistProperties="Code,CountryName"
                                                       LabelText="{Binding lcountrynif, Source={StaticResource ResourceLanguage}}"
                                                       LabelTextWidth="50"   
                                                       Margin="0,5,0,0"
